--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,15 @@
-.feeds-div {
+/*.instagram-feed {
+  display: flex;
+  flex-direction: column;
+}*/
+
+.instagram-tag {
+  display:flex;
+  justify-content: center;
+}
+
+#instafeed {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  flex-wrap: wrap;
 }
