find instafeed div width when window width changes

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,15 +1,6 @@
-/*.instagram-feed {
-  display: flex;
-  flex-direction: column;
-}*/
-
-.instagram-tag {
-  display:flex;
-  justify-content: center;
-}
-
 #instafeed {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
