get instagram logo at bottom of page to match others

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1876,12 +1876,12 @@
 					background: #df7b77;
 				}
 
-			.icon.circle.fa-github {
+			.icon.circle.fa-instagram {
 				background: #dcad8b;
 				color: #fff;
 			}
 
-				.icon.circle.fa-github:hover {
+				.icon.circle.fa-instagram:hover {
 					background: #e1b89b;
 				}
 
