--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,6 +39,10 @@
     width: 100%;
   }
 
+.background p {
+  text-align: left;
+}
+
 @media screen and (max-width: 1680px) {
   .instagram-pic:nth-last-child(-n+4) {
     display: none;
